#-: fixed sidebar manu overflow

--- a/client/style/less/markup/menu.less
+++ b/client/style/less/markup/menu.less
@@ -109,6 +109,7 @@
     width: 80vw;
     left: -80vw;
     z-index: 2;
+    overflow-y: overlay;
     -webkit-transition: left @TRANSITION_SPEED, -webkit-transform @TRANSITION_SPEED;
     transition: left @TRANSITION_SPEED, transform @TRANSITION_SPEED;
 
